--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.378.0",
     "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
